@startuml use-of-collections-life-cycle
title Collection Use Project Life Cycle

skinparam shadowing false
skinparam state {
  BackgroundColor #F8FAFC
  BorderColor #334155
  FontColor #111827
}
skinparam note {
  BackgroundColor #FFFBEB
  BorderColor #B45309
}

[*] --> Created : approve proposal or create follow-up\nUseEvent.REQUESTED

state "CREATED" as Created
state "IN_PROGRESS" as InProgress
state "COMPLETED" as Completed
state "CANCELLED" as Cancelled

Created --> Created : edit metadata\nadd/remove objects
Created --> InProgress : record_started()\nUseEvent.STARTED
Created --> Cancelled : record_cancelled()\nUseEvent.CANCELLED

InProgress --> InProgress : edit metadata\nadd/remove objects\naccess/occurrence/publication logs
InProgress --> Completed : record_completed()\n[at least one CollectionUseObject]\nUseEvent.COMPLETED
InProgress --> Cancelled : record_cancelled()\nUseEvent.CANCELLED

Completed --> Completed : generate reports / CIDOC / narrative\n(no project state change)
Completed --> [*]
Cancelled --> [*]

@enduml
